--- a/Express/package.json
+++ b/Express/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/mariamconde/itis_4166#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   }
 }
