--- a/Express/package.json
+++ b/Express/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mariamconde/itis_4166#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
