--- a/ModelViewController/module6/package.json
+++ b/ModelViewController/module6/package.json
@@ -9,6 +9,8 @@
   "author": "Lijuan Cao",
   "license": "ISC",
   "dependencies": {
-    "luxon": "^3.0.4"
+    "luxon": "^3.0.4",
+    "method-override": "^3.0.0",
+    "uuid": "^9.0.0"
   }
 }
