--- a/module9/package.json
+++ b/module9/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "luxon": "^3.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.2",
