--- a/module11/package.json
+++ b/module11/package.json
@@ -12,11 +12,13 @@
     "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
     "express-session": "^1.17.1",
+    "luxon": "^3.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.15",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.0"
   }
 }
