--- a/module11/package.json
+++ b/module11/package.json
@@ -14,6 +14,7 @@
     "connect-mongo": "^4.4.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.1",
     "luxon": "^3.1.1",
     "method-override": "^3.0.0",
