--- a/module11/package.json
+++ b/module11/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.1",
+    "express-validator": "^6.14.2",
     "luxon": "^3.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.15",
